2002-08-29  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_managed_wrapper): don't cache
	wrappers for instance methods.
	
2002-08-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c: added ves_icall_System_IO_Path_get_temp_path.

2002-08-28  Dick Porter  <dick@ximian.com>

	* Makefile.am: Export HOST_CC for w32 builds

Tue Aug 27 18:34:51 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* file-io.c process.c: MonoString are null terminated, no
	need for mono_string_to_utf16() anymore.

Tue Aug 27 17:51:27 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c, unicode.h, unicode.c: removed unused iconv stuff.

Tue Aug 27 16:38:58 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c, reflection.h: speedup System.MonoType.

Tue Aug 27 16:37:01 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: allow null as the value of a string argument in
	custom attributes constructors.

2002-08-27  Martin Baulig  <martin@gnome.org>

	* debug-mono-symfile.h (MonoSymbolFileMethodAddress): Removed the
	`trampoline_address' field.

2002-08-27  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_native_wrapper): removed wrong null
	check (fixes bug #29486) 

2002-08-27  Martin Baulig  <martin@gnome.org>

	* debug-mono-symfile.c: Changed the file format in a way that allows us
	open it read-only and to use a specially malloced area for all the
	dynamic data.  We can now also generate a symbol file on-the-fly if we're
	debugging IL code and there is no MCS generated symbol file for it.

Mon Aug 26 16:47:37 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* object.c: added a define for a good string and array
	creation speedup (not enabled by default because we need to deal with
	the synch stuff).

2002-08-26  Martin Baulig  <martin@gnome.org>

	* debug-mono-symfile.c (mono_debug_create_mono_symbol_file): New
	function to create a dynamic symbol file.  This is used by the
	debugger to create a symbol file for IL code on-the-fly.
