@@ -1,3 +1,7 @@
+2002-08-29  Miguel de Icaza  <miguel@ximian.com>
+
+	* image.c (do_mono_image_open): Remove linker version check.
+
 2002-08-29  Dietmar Maurer  <dietmar@ximian.com>
 
 	* marshal.c (mono_marshal_get_managed_wrapper): don't cache
